--- a/index.html
+++ b/index.html
@@ -104,26 +104,20 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
 				<p>Do you know..?</p>
 				<p>today is just special</p>
 				<p>so special to you</p>
 				<p>that's why</p>
 				<p>Let's make it...</p>
 				<p>the best celebration ever</p>
-				<p>and let me share...</p>
+				<p>and let us share...</p>
 				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
+				<p>We made all this...</p>
 				<p>as a birthday present to you</p>
 				<p>thanks for being there</p>
 				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
+				<p>We wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
 				<p>Remember</p>
@@ -140,7 +134,7 @@
 				<p>God has your back</p>
 				<p>and</p>
 				<p>this year will be better</p>
-				<p>and I hope</p>
+				<p>and We hope</p>
 				<p>you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
@@ -149,8 +143,8 @@
 				<p>fill it with your most beautiful smile</p>
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>We'd like to wish you one more time</p>
+				<p>a very happy birthday Sherbin</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
